# desktop

./: .env.example  .gitignore  .npmrc  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY_MODEL.md  STACK.md  angular.json  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.githooks/: check-author.sh  pre-commit  prepare-commit-msg
.github/workflows/: ci.yml  release-desktop.yml  release.yml  web-deploy.yml
.nx/workspace-data/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json  source-maps.json
apps/desktop/: README.md  package.json  project.json  tsconfig.app.json  tsconfig.json
apps/desktop-legacy/: .gitignore  README.md  index.html  package.json  vite.config.ts  vitest.config.ts
apps/desktop-legacy/scripts/: build-macos-icns.sh  build-tray-icons.sh  build-tray-icons.swift  check-i18n-keys.mjs  macos-icon-pad.swift  sync-version.mjs
apps/desktop-legacy/src/: App.tsx  main.tsx
apps/desktop-legacy/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  updater.key.pub
apps/desktop-legacy/src-tauri/capabilities/: default.json
apps/desktop-legacy/src-tauri/icons/: icon.icns
apps/desktop-legacy/src-tauri/src/: error.rs  lib.rs  macos_titlebar.rs  main.rs  remote_connect.rs  remote_pool.rs  ssh_auth.rs  tray.rs  tray_i18n.rs  vibrancy.rs
apps/desktop-legacy/src-tauri/src/commands/: app.rs  hosts.rs  keys.rs  keys_generate.rs  mod.rs  remote_fs.rs  snippets.rs  sync.rs  vault.rs  window.rs
apps/desktop-legacy/src-tauri/src/db/: mod.rs  schema.rs
apps/desktop-legacy/src-tauri/src/session/: emit.rs  local.rs  manager.rs  mod.rs  os_detect.rs  ssh.rs  types.rs
apps/desktop-legacy/src-tauri/src/sync/: client.rs  crypto.rs  mod.rs
apps/desktop-legacy/src-tauri/src/vault/: access.rs  crypto.rs  keychain.rs  keychain_biometric.rs  mod.rs
apps/desktop-legacy/src-tauri/tests/: pty_echo.rs
apps/desktop/electron/: auto-lock.ts  data-store.ts  detect-platform.ts  host-platform-detect.ts  hosts-store-types.ts  hosts-store.ts  keys-generate.ts  keys-store.ts  local-fs.ts  main.ts  preload.ts  pty-manager.ts  remote-fs.ts  snippets-store.ts  ssh-auth.ts  ssh-config.ts  ssh-pty.ts  ssh-sftp.ts  sync-client.ts  sync-crypto.ts  sync-engine.ts  sync-meta.ts  tray.ts  (+6 more)
apps/web/: package.json  project.json  tsconfig.app.json  tsconfig.json
crates/termsh-core/: Cargo.toml
crates/termsh-core/ffi/: termsh_core.udl
crates/termsh-core/napi/: Cargo.toml
crates/termsh-core/napi/src/: lib.rs
crates/termsh-core/src/: error.rs  lib.rs  models.rs
crates/termsh-core/src/db/: mod.rs  schema.rs
crates/termsh-core/src/ffi/: mod.rs
crates/termsh-core/src/vault/: crypto.rs  kdf.rs  mod.rs  payload.rs  runtime.rs
libs/angular/: package.json  project.json
libs/assets/: project.json
libs/auth/: project.json
libs/common/: package.json  project.json
libs/components/: package.json  project.json
libs/platform/: package.json  project.json
libs/ssh/: package.json  project.json
libs/state/: package.json  project.json
libs/terminal/: package.json  project.json
libs/vault/: package.json  project.json
scripts/: postinstall.mjs
(+342 files in other folders)
