[package]
name = "termsh-desktop"
version = "0.0.0"
# Desktop Tauri app — legacy Win/Linux; macOS hedefi apps/apple
description = "termsh — lightweight SSH terminal"
authors = ["termsh"]
license = "AGPL-3.0"
edition = "2021"

[lib]
name = "termsh_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test", "tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
ssh2 = "0.9"
ssh-key = { version = "0.6", features = ["ed25519", "rsa"] }
keyring = "3.6.3"
chrono = { version = "0.4", features = ["clock", "serde"] }
suppaftp = "8.0.3"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["sync", "time"] }
termsh-core = { path = "../../../crates/termsh-core" }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSWindow", "NSView"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSGeometry"] }
security-framework = "3.7"
security-framework-sys = "2.17"
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2-local-authentication = { version = "0.3", default-features = true }

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.6"
