[package]
name = "termsh-core-napi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NAPI-RS bindings for termsh-core (Electron desktop)"

[lib]
crate-type = ["cdylib"]

[dependencies]
termsh-core = { path = ".." }
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
